fix(kafka): assign default storageclass, fix labels for monitoring (#1422)
* fix(kafka): assign default storageclass

* update podMonitor labels and selector.matchlabels

* update README

--- a/kafka/chart/values.yaml
+++ b/kafka/chart/values.yaml
@@ -45,7 +45,7 @@ kafka:
       type: persistent-claim
       size: 100Gi
       deleteClaim: false
-      class: ""
+      class: default
 
   # -- Resource configuration for Kafka brokers
   # @default -- requests: 2Gi memory, 1 CPU; limits: 4Gi memory, 2 CPU
@@ -147,6 +147,10 @@ cruiseControl:
 monitoring:
   # -- Enable Prometheus monitoring
   enabled: true
+  # -- Pod Monitor configuration
+  podMonitor:
+    # -- Labels to add to the PodMonitor so Prometheus can discover it.
+    labels: {}
 
   # -- Additional labels for PrometheusRule alerts
   additionalRuleLabels: {}
