--- a/alertmanager/charts/templates/caBundle-secret.yaml
+++ b/alertmanager/charts/templates/caBundle-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.alerts.alertmanager.enabled .Values.alerts.alertmanager.ingress.enabled .Values.global.caCert .Values.alerts.caCert }}
+{{- if and .Values.alertmanager.alertmanager.enabled .Values.alertmanager.alertmanager.ingress.enabled .Values.global.caCert .Values.alertmanager.caCert }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -7,5 +7,5 @@ metadata:
   labels:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 data:
-  ca.crt: {{ printf "%s%s" .Values.global.caCert .Values.alerts.caCert | b64enc | quote }}
+  ca.crt: {{ printf "%s%s" .Values.global.caCert .Values.alertmanager.caCert | b64enc | quote }}
 {{- end }}
