--- a/alertmanager/charts/templates/certmanager.yaml
+++ b/alertmanager/charts/templates/certmanager.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.alerts.certManager.enabled -}}
-{{- if not .Values.alerts.certManager.issuerRef -}}
+{{- if .Values.alertmanager.certManager.enabled -}}
+{{- if not .Values.alertmanager.certManager.issuerRef -}}
 # Create a selfsigned Issuer in order to create a root CA certificate for the org
 # signing alertmanager serving certificates
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: '{{ .Release.Namespace }}-alerts-issuer'
+  name: '{{ .Release.Namespace }}-alertmanager-issuer'
   labels:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
@@ -15,14 +15,14 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: '{{ .Release.Namespace }}-alerts-root-cert'
+  name: '{{ .Release.Namespace }}-alertmanager-root-cert'
   labels:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
-  secretName: tls-alerts-{{ .Release.Namespace  }}-root-ca
-  duration: {{ .Values.alerts.certManager.rootCert.duration | default "43800h0m0s" | quote }}
+  secretName: tls-alertmanager-{{ .Release.Namespace  }}-root-ca
+  duration: {{ .Values.alertmanager.certManager.rootCert.duration | default "43800h0m0s" | quote }}
   issuerRef:
-    name: {{ .Release.Namespace }}-alerts-issuer
+    name: {{ .Release.Namespace }}-alertmanager-issuer
   commonName: "ca.prometheus.greenhouse"
   isCA: true
 ---
@@ -30,12 +30,12 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: '{{ .Release.Namespace }}-alerts-root-issuer'
+  name: '{{ .Release.Namespace }}-alertmanager-root-issuer'
   labels:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
   ca:
-    secretName: tls-alerts-{{ .Release.Namespace  }}-root-ca
+    secretName: tls-alertmanager-{{ .Release.Namespace  }}-root-ca
 {{- end }}
 ---
 # generate a server certificate for the alertmanager to use
@@ -47,12 +47,12 @@ metadata:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
   secretName: tls-alertmanager-{{ .Release.Namespace }}
-  duration: {{ .Values.alerts.certManager.admissionCert.duration | default "8760h0m0s" | quote }}
+  duration: {{ .Values.alertmanager.certManager.admissionCert.duration | default "8760h0m0s" | quote }}
   issuerRef:
-    {{- if .Values.alerts.certManager.issuerRef }}
-    {{- toYaml .Values.alerts.certManager.issuerRef | nindent 4 }}
+    {{- if .Values.alertmanager.certManager.issuerRef }}
+    {{- toYaml .Values.alertmanager.certManager.issuerRef | nindent 4 }}
     {{- else }}
-    name: {{ .Release.Namespace }}-alerts-root-issuer
+    name: {{ .Release.Namespace }}-alertmanager-root-issuer
     {{- end }}
   dnsNames:
   - {{ include "kube-prometheus-stack.fullname" . }}
@@ -61,8 +61,8 @@ spec:
 {{- if .Values.global.greenhouse.baseDomain }}
   - {{ printf "*.%s" .Values.global.greenhouse.baseDomain | quote }}
 {{- end }}
-{{- if and .Values.alerts.alertmanager.ingress.enabled .Values.alerts.alertmanager.ingress.hosts }}
-{{ toYaml .Values.alerts.alertmanager.ingress.hosts | indent 2 }}
+{{- if and .Values.alertmanager.alertmanager.ingress.enabled .Values.alertmanager.alertmanager.ingress.hosts }}
+{{ toYaml .Values.alertmanager.alertmanager.ingress.hosts | indent 2 }}
 {{- end }}
 ---
 # generate a shared client certificate for prometheus to use
@@ -74,12 +74,12 @@ metadata:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
   secretName: tls-prometheus-{{ .Release.Namespace }}
-  duration: {{ .Values.alerts.certManager.admissionCert.duration | default "8760h0m0s" | quote }}
+  duration: {{ .Values.alertmanager.certManager.admissionCert.duration | default "8760h0m0s" | quote }}
   issuerRef:
-    {{- if .Values.alerts.certManager.issuerRef }}
-    {{- toYaml .Values.alerts.certManager.issuerRef | nindent 4 }}
+    {{- if .Values.alertmanager.certManager.issuerRef }}
+    {{- toYaml .Values.alertmanager.certManager.issuerRef | nindent 4 }}
     {{- else }}
-    name: {{ .Release.Namespace }}-alerts-root-issuer
+    name: {{ .Release.Namespace }}-alertmanager-root-issuer
     {{- end }}
   dnsNames:
   - {{ include "kube-prometheus-stack.fullname" . }}
