--- a/alertmanager/charts/templates/am-base-config.yaml
+++ b/alertmanager/charts/templates/am-base-config.yaml
@@ -1,4 +1,4 @@
-{{ if or .Values.alerts.alertmanagerConfig.slack.routes .Values.alerts.alertmanagerConfig.webhook.routes }}
+{{ if or .Values.alertmanager.alertmanagerConfig.slack.routes .Values.alertmanager.alertmanagerConfig.webhook.routes }}
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: AlertmanagerConfig
 metadata:
@@ -14,16 +14,16 @@ spec:
         matchType: "!~"
         value: "Watchdog|InfoInhibitor"
     routes:
-      {{- range $route := .Values.alerts.alertmanagerConfig.slack.routes }}
-      - receiver: {{ required ".Values.alerts.alertmanagerConfig.slack.routes[].name missing" $route.name | quote }}
+      {{- range $route := .Values.alertmanager.alertmanagerConfig.slack.routes }}
+      - receiver: {{ required ".Values.alertmanager.alertmanagerConfig.slack.routes[].name missing" $route.name | quote }}
         continue: true
         {{- if $route.matchers }}
         matchers:
           {{ toYaml $route.matchers | nindent 10 }}
         {{- end }}
       {{- end }}
-      {{- range $route := .Values.alerts.alertmanagerConfig.webhook.routes }}
-      - receiver: {{ required ".Values.alerts.alertmanagerConfig.webhook.routes[].name missing" $route.name | quote }}
+      {{- range $route := .Values.alertmanager.alertmanagerConfig.webhook.routes }}
+      - receiver: {{ required ".Values.alertmanager.alertmanagerConfig.webhook.routes[].name missing" $route.name | quote }}
         continue: true
         {{- if $route.matchers }}
         matchers:
@@ -32,12 +32,12 @@ spec:
       {{- end }}
   receivers:
     - name: base-route
-    {{- range $route := .Values.alerts.alertmanagerConfig.slack.routes }}
-    - name: {{ required ".Values.alerts.alertmanagerConfig.slack.routes[].name missing" $route.name | quote }}
+    {{- range $route := .Values.alertmanager.alertmanagerConfig.slack.routes }}
+    - name: {{ required ".Values.alertmanager.alertmanagerConfig.slack.routes[].name missing" $route.name | quote }}
       slackConfigs:
-        - channel: {{ required ".Values.alerts.alertmanagerConfig.slack.routes[].channel missing" $route.channel | quote }}
+        - channel: {{ required ".Values.alertmanager.alertmanagerConfig.slack.routes[].channel missing" $route.channel | quote }}
           apiURL:
-            key: {{ required ".Values.alerts.alertmanagerConfig.slack.routes[].name missing" $route.name | quote }}
+            key: {{ required ".Values.alertmanager.alertmanagerConfig.slack.routes[].name missing" $route.name | quote }}
             name: {{ $.Release.Name }}-webhook-urls
           username: {{ default "Greenhouse" $route.username }}
           title: {{"'{{template \"slack.title\" . }}'"}}
@@ -49,11 +49,11 @@ spec:
           color: {{`'{{template "slack.color" . }}'`}}
           sendResolved: true
     {{- end }}
-    {{- range $route := .Values.alerts.alertmanagerConfig.webhook.routes }}
-    - name: {{ required ".Values.alerts.alertmanagerConfig.webhook.routes[].name missing" $route.name | quote }}
+    {{- range $route := .Values.alertmanager.alertmanagerConfig.webhook.routes }}
+    - name: {{ required ".Values.alertmanager.alertmanagerConfig.webhook.routes[].name missing" $route.name | quote }}
       webhookConfigs:
         - urlSecret:
-            key: {{ required ".Values.alerts.alertmanagerConfig.webhook.routes[].name missing" $route.name | quote }}
+            key: {{ required ".Values.alertmanager.alertmanagerConfig.webhook.routes[].name missing" $route.name | quote }}
             name: {{ $.Release.Name }}-webhook-urls
           sendResolved: true
     {{ end }}
@@ -66,13 +66,13 @@ metadata:
   labels:
 {{- include "kube-prometheus-stack.labels" . | indent 4 }}
 data:
-{{- if .Values.alerts.alertmanagerConfig.slack.routes }}
-{{- range $route := .Values.alerts.alertmanagerConfig.slack.routes }}
+{{- if .Values.alertmanager.alertmanagerConfig.slack.routes }}
+{{- range $route := .Values.alertmanager.alertmanagerConfig.slack.routes }}
   {{ $route.name }}: {{ $route.webhookURL | b64enc | quote }}
 {{- end }}
 {{- end }}
-{{- if .Values.alerts.alertmanagerConfig.webhook.routes }}
-{{- range $route := .Values.alerts.alertmanagerConfig.webhook.routes }}
+{{- if .Values.alertmanager.alertmanagerConfig.webhook.routes }}
+{{- range $route := .Values.alertmanager.alertmanagerConfig.webhook.routes }}
   {{ $route.name }}: {{ $route.url | b64enc | quote }}
 {{- end }}
 {{- end }}
