--- a/.github/workflows/e2e-flux-helm.yaml
+++ b/.github/workflows/e2e-flux-helm.yaml
@@ -106,6 +106,10 @@ jobs:
           } >> "$GITHUB_OUTPUT"
           echo "Single changed chart: $chart_dir (name=$plugin_name)"
 
+      - name: Run chart-testing (test)
+        if: steps.list-changed.outputs.changed == 'true'
+        run: ct test --config ${{ env.CT_CONFIG }} --target-branch ${{ github.event.repository.default_branch }}
+
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
         uses: helm/kind-action@92086f6be054225fa813e0a4b13787fc9088faab # v1.13.0
