--- a/.github/workflows/e2e-flux-helm.yaml
+++ b/.github/workflows/e2e-flux-helm.yaml
@@ -108,7 +108,9 @@ jobs:
 
       - name: Run chart-testing (test)
         if: steps.list-changed.outputs.changed == 'true'
-        run: ct lint --config ${{ env.CT_CONFIG }} --target-branch ${{ github.event.repository.default_branch }}
+        run: |
+          set -euo pipefail
+          ct lint --config ${{ env.CT_CONFIG }} --target-branch ${{ github.event.repository.default_branch }}
 
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
