--- a/.github/workflows/e2e-flux-helm.yaml
+++ b/.github/workflows/e2e-flux-helm.yaml
@@ -106,8 +106,9 @@ jobs:
           } >> "$GITHUB_OUTPUT"
           echo "Single changed chart: $chart_dir (name=$plugin_name)"
 
-      - name: Run chart-testing (test)
+      - name: Run chart-testing (lint)
         if: steps.list-changed.outputs.changed == 'true'
+        id: ct-lint
         run: |
           set -euo pipefail
           ct lint --config ${{ env.CT_CONFIG }} --target-branch ${{ github.event.repository.default_branch }}
@@ -235,7 +236,7 @@ jobs:
           }
 
       - name: Print pod logs on failure
-        if: failure() && steps.list-changed.outputs.changed == 'true'
+        if: failure() && steps.list-changed.outputs.changed == 'true' && steps.ct-lint.outcome == 'success'
         run: |
           kubectl get pods -n default || true
           helm list -n flux-system
