--- a/.github/workflows/e2e-flux-helm.yaml
+++ b/.github/workflows/e2e-flux-helm.yaml
@@ -106,6 +106,13 @@ jobs:
           } >> "$GITHUB_OUTPUT"
           echo "Single changed chart: $chart_dir (name=$plugin_name)"
 
+      - name: Run chart-testing (lint)
+        if: steps.list-changed.outputs.changed == 'true'
+        id: ct-lint
+        run: |
+          set -euo pipefail
+          ct lint --config ${{ env.CT_CONFIG }} --target-branch ${{ github.event.repository.default_branch }}
+
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
         uses: helm/kind-action@92086f6be054225fa813e0a4b13787fc9088faab # v1.13.0
@@ -229,7 +236,7 @@ jobs:
           }
 
       - name: Print pod logs on failure
-        if: failure() && steps.list-changed.outputs.changed == 'true'
+        if: failure() && steps.list-changed.outputs.changed == 'true' && steps.ct-lint.outcome == 'success'
         run: |
           kubectl get pods -n default || true
           helm list -n flux-system
