enable absent metrics oeprator helm release

--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -7,6 +7,7 @@ on:
         - main
     paths:
       - .github/workflows/helm-release.yaml
+      - absent-metrics-operator/charts/**
       - alerts/charts/**
       - audit-logs/charts/**
       - cert-manager/charts/**
@@ -42,6 +43,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - chartDir: absent-metrics-operator/charts
+            chartName: absent-metrics-operator
           - chartDir: alerts/charts
             chartName: alerts
           - chartDir: audit-logs/charts
